[gd_scene load_steps=21 format=3 uid="uid://c6rpdqb17327o"]

[ext_resource type="Script" path="res://scripts/td/buildings/Module.gd" id="1_bn7lv"]
[ext_resource type="PackedScene" uid="uid://cxrcptlbws3jo" path="res://scenes/td/building/building_actions.tscn" id="2_8odok"]
[ext_resource type="Texture2D" uid="uid://q2i8l25wbq8q" path="res://assets/icons/buildings/basic_module.png" id="2_ikse0"]
[ext_resource type="Texture2D" uid="uid://bucjgj3sclwdy" path="res://assets/buildings/basic_module.png" id="3_273oi"]
[ext_resource type="Script" path="res://components/hitbox/HitboxComponent.gd" id="4_f7q17"]
[ext_resource type="Shader" path="res://unit_outline.gdshader" id="5_ubt1g"]
[ext_resource type="PackedScene" uid="uid://bc1ifnp3up1rc" path="res://components/health/health_component.tscn" id="5_y1nve"]
[ext_resource type="PackedScene" uid="uid://nlcnfwavt8yc" path="res://components/selection/selection_component.tscn" id="6_4kqow"]
[ext_resource type="PackedScene" uid="uid://3l1kpsyqp8xw" path="res://components/network/network_component.tscn" id="7_8ntal"]
[ext_resource type="Script" path="res://scripts/game/EntityStats.gd" id="9_b3bry"]
[ext_resource type="PackedScene" uid="uid://b17vgvl5v7hpa" path="res://components/death/death_component.tscn" id="10_phna6"]
[ext_resource type="PackedScene" uid="uid://cnc4fn42qv356" path="res://components/action/action_component.tscn" id="11_carw8"]
[ext_resource type="Script" path="res://scripts/td/actions/RemoveBuilding.gd" id="12_5b3yh"]
[ext_resource type="Texture2D" uid="uid://be1fkpcexfama" path="res://assets/buildings/basic_module_destroyed.png" id="12_d8f5k"]
[ext_resource type="Texture2D" uid="uid://bjd8p7m0fgmci" path="res://assets/icons/action/delete_building.png" id="13_bh0vm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ucsn"]
resource_local_to_scene = true
shader = ExtResource("5_ubt1g")
shader_parameter/width = null
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ila"]
atlas = ExtResource("3_273oi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkluu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ila")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwgbt"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7th70"]
size = Vector2(150, 150)

[node name="Module" type="StaticBody2D" node_paths=PackedStringArray("sprite", "health", "death", "action_controller", "action_panel", "hitbox", "selection", "network") groups=["building", "navigation", "player_entity"]]
collision_layer = 38
collision_mask = 0
input_pickable = true
script = ExtResource("1_bn7lv")
sprite = NodePath("AnimatedSprite2D")
health = NodePath("HealthComponent")
death = NodePath("DeathComponent")
action_controller = NodePath("ActionComponent")
action_panel = NodePath("BuildingActions")
hitbox = NodePath("HitboxComponent")
selection = NodePath("SelectionComponent")
network = NodePath("NetworkComponent")
display_name = "Module"
str_type = "module"
icon = ExtResource("2_ikse0")

[node name="NetworkComponent" parent="." instance=ExtResource("7_8ntal")]

[node name="BuildingActions" parent="." instance=ExtResource("2_8odok")]
z_index = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_0ucsn")
position = Vector2(-1, -6)
sprite_frames = SubResource("SpriteFrames_kkluu")

[node name="HitboxComponent" type="CollisionShape2D" parent="." node_paths=PackedStringArray("health_component", "character")]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_gwgbt")
script = ExtResource("4_f7q17")
health_component = NodePath("../HealthComponent")
character = NodePath("..")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("5_y1nve")]
z_index = 3
scale = Vector2(2, 2)
stats = NodePath("../CharacterStats")

[node name="SelectionComponent" parent="." node_paths=PackedStringArray("network", "sprites", "body", "node_shown_on_hover") instance=ExtResource("6_4kqow")]
network = NodePath("../NetworkComponent")
sprites = [NodePath("../AnimatedSprite2D")]
body = NodePath("..")
show_node_on_hover = true
node_shown_on_hover = [NodePath("../EffectRange/ColorRect")]

[node name="CharacterStats" type="Node2D" parent="."]
script = ExtResource("9_b3bry")
max_health = 500

[node name="DeathComponent" parent="." node_paths=PackedStringArray("sprite", "health", "body", "corpse", "delete_timer") instance=ExtResource("10_phna6")]
sprite = NodePath("../AnimatedSprite2D")
health = NodePath("../HealthComponent")
body = NodePath("..")
corpse = NodePath("Corpse")
delete_timer = NodePath("Timer")
corpse_time = 5

[node name="Corpse" type="Sprite2D" parent="DeathComponent"]
position = Vector2(-1, -6)
texture = ExtResource("12_d8f5k")

[node name="Timer" type="Timer" parent="DeathComponent"]

[node name="ActionComponent" parent="." node_paths=PackedStringArray("body", "actions_container") instance=ExtResource("11_carw8")]
body = NodePath("..")
actions_container = NodePath(".")

[node name="RemoveBuilding" type="Node2D" parent="ActionComponent" node_paths=PackedStringArray("building", "cooldown", "time")]
script = ExtResource("12_5b3yh")
building = NodePath("../..")
title = "Remove Module"
icon = ExtResource("13_bh0vm")
cooldown = NodePath("Cooldown")
time = NodePath("Timer")
description = "Delete this building"

[node name="Timer" type="Timer" parent="ActionComponent/RemoveBuilding"]
wait_time = 0.1

[node name="Cooldown" type="Timer" parent="ActionComponent/RemoveBuilding"]
wait_time = 0.2

[node name="EffectRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectRange"]
shape = SubResource("RectangleShape2D_7th70")

[node name="ColorRect" type="ColorRect" parent="EffectRange"]
custom_minimum_size = Vector2(150, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.04, 0.744, 1, 0.14902)
